k8s/02-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-keycloak
  namespace: eventsourcing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es-keycloak
  template:
    metadata:
      labels:
        app: es-keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0
          args: ["start-dev"]
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: es-keycloak
  namespace: eventsourcing
spec:
  selector:
    app: es-keycloak
  ports:
    - port: 8081
      targetPort: 8081
